--- a/src/components/myHeadspace/HeadspaceContent.css
+++ b/src/components/myHeadspace/HeadspaceContent.css
@@ -119,10 +119,10 @@
     font-size: 23px;
     font-weight: bold;
   }
-  .explore-card-cont {
+  /* .explore-card-cont {
     display: flex;
-  }
-  .explore-card-cont {
+  } */
+  /* .explore-card-cont {
     background-color: rgb(249, 244, 242);
-  }
+  } */
   
